<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearContainer"
    tools:context="com.example.gb.a1100695733.CustomerActivity"
    style="@style/Padding.Layout">
    <LinearLayout style="@style/Padding.Layout.Linear">

        <TextView
            android:id="@+id/customerTitle"
            style="@style/MyText.Large.Title"
            android:text="@string/enter_customer_information"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelFirstName"
                    android:text="@string/first_name"
                    style="@style/MyText.Medium"
                    />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_weight="1"
                    style="@style/MyText.Medium"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelLastName"
                    android:text="@string/last_name"
                    style="@style/MyText.Medium" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_weight="1"
                    style="@style/MyText.Medium"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelAddress"
                    android:text="@string/address"
                    style="@style/MyText.Medium"
                    />

                <EditText
                    android:id="@+id/address"
                    android:layout_weight="1"
                    style="@style/MyText.Medium"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelCreditCard"
                    android:text="@string/credit_card_number"
                    style="@style/MyText.Medium"
                    />

                <EditText
                    android:id="@+id/creditCard"
                    android:text=""
                    style="@style/MyText.Medium"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelFavouriteFood"
                    android:text="@string/favourite_food"
                    style="@style/MyText.Medium"
                    />

                <EditText
                    android:id="@+id/favouriteFood"
                    android:layout_weight="1"
                    style="@style/MyText.Medium"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelFavouriteCuisine"
                    android:text="@string/favourite_cuisine"
                    style="@style/MyText.Medium"
                    />

                <EditText
                    android:id="@+id/favouriteCuisine"
                    style="@style/MyText.Medium" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelFoodRestrictions"
                    android:text="@string/food_restrictions"
                    style="@style/MyText.Medium"
                    />

                <RelativeLayout
                    style="@style/MySpinnerBackground">
                    <Spinner
                        android:id="@+id/spinnerFoodRestrictions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/food_restrictions"
                        />
                </RelativeLayout>

            </TableRow>
        </TableLayout>
    </LinearLayout>


    <Button
        android:id="@+id/buttonOrder"
        android:text="@string/order"
        android:onClick="buttonClickHandler"
        style="@style/MyButton"
         />


</RelativeLayout>



